[package]
name = "cn"
version = "1.0.0"
authors = ["Arijit Dey <arijid79@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
ansi_term = "0.11.0"
atty = "0.2.14"
async-recursion = "*"
futures = "*"
async-std = { version = "1.7.0", features = ["attributes"]}